2005-12-21  Michael Jung  <mjung@iss.tu-darmstadt.de>

	* lib/user32.def (PrivateExtractIconsA@32, 
	PrivateExtractIconsW@32): Define.
	* lib/shell32.c (IID_IShellLinkDataList): Add GUID.

2005-12-12  Christopher Faylor  <cgf@timesys.com>

	* include/winuser.h (WINSTA_ALL_ACCESS): Define.

2005-12-09  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/kernel32.def (CreateFiberEx): Correct suffix.

2005-12-09  Huw Davies <hdavies@users.sourceforge.net>
	    Danny Smith <dannysmith@users.sourceforge.net>

	* lib/msxml-uuid.c: New file to generate UUIDs for 
	MSXML interfaces.
	* lib/Makefile.in (UUID_OBJS): Add msxml-uuid.o.

2005-12-07  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (GetDevicePowerState): Add prototype.
	* lib/kernel32.def (GetDevicePowerState): Correct suffix.

2005-12-07  Brian Gunlogson  <gmb300@users.sourceforge.net>

	* include/winuser.h (GetClassLongPtr{AW}): Guard prototypes with _WIN64.
	Define as macro if !_WIN64.
	(SetClassLongPtr{AW}): Likewise.
	(GCLP_*): Add GetClassLongPtr defines.
	* lib/user32.def (GetClassLongPtr{AW}): Remove stubs.
	(SetClassLongPtr{AW}): Likewise.

2005-11-18  Brian Gunlogson  <gmb300@users.sourceforge.net>

	* include/winuser.h (GetClassLongPtr{AW}): Add prototypes.
	(SetClassLongPtr{AW}): Likewise.
	(GCLP_*): Add GetClassLongPtr defines.
	* lib/user32.def (GetClassLongPtr{AW}): Add stubs.
	(SetClassLongPtr{AW}): Likewise.

2005-11-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h (OPENFILENAMEW): Add members for
	_WIN32_WINNT >= 0x0500.
	Thanks to Ricardo Dalcorsso Fodra.
	(OPENFILENAMEA): Modify whitespace. Ansify comment.

2005-11-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wingdi.h (GetICMProfileA): Correct prototype.
	(GetICMProfileW): Likewise.
	Thanks to: Paul J Lucas

2005-11-04  Michael Jung  <mjung@iss.tu-darmstadt.de> 

	* lib/shell32.c (CLSID_ShellFSFolder): Add GUID.

2005-11-03  Danny Smith  <dannysmith@users.sourceforge.net>
